builtin tool clarification

--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -209,7 +209,7 @@ The **Builtin Tools** capability can be toggled on or off for each model in the 
 2. **RAG still works** (if File Context is enabled): Attached files are still processed via RAG and injected as context.
 3. **No autonomous retrieval**: The model cannot decide to search knowledge bases or fetch additional information—it works only with what's provided upfront.
 
-:::warning Builtin Tools vs File Context
+:::tip Builtin Tools vs File Context
 **Builtin Tools** controls whether the model gets *tools* for autonomous retrieval. It does **not** control whether file content is injected via RAG—that's controlled by the separate **File Context** capability.
 
 - **File Context** = Whether Open WebUI extracts and injects file content (RAG processing)
