--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -150,8 +150,8 @@ These models excel at multi-step reasoning, proper JSON formatting, and autonomo
 
 | Tool | Purpose |
 |------|---------|
-| **Search & Web** | *Requires `ENABLE_WEB_SEARCH` + model `web_search` capability + chat toggle ON.* |
-| `search_web` | Search the public web for information. Best for current events, external references, or topics not covered in internal documents. |
+| **Search & Web** |  |
+| `search_web` | *Requires `ENABLE_WEB_SEARCH` + model `web_search` capability + chat toggle ON.* – Search the public web for information. Best for current events, external references, or topics not covered in internal documents. |
 | `fetch_url` | Visits a URL and extracts text content via the Web Loader. |
 | **Knowledge Base** | *Always available.* |
 | `list_knowledge_bases` | List the user's accessible knowledge bases with file counts. |
