--- a/docs/features/web-search/agentic-search.mdx
+++ b/docs/features/web-search/agentic-search.mdx
@@ -36,7 +36,7 @@ To unlock these features, your model must support native tool calling and have s
 4.  **Use a Quality Model**: Ensure you're using a frontier model with strong reasoning capabilities for best results.
 
 :::tip Four-Layer Tool Control
-In **Native Mode**, the `search_web` and `fetch_url` tools require **all four conditions** to be met:
+In **Native Mode**, the `search_web` tool requires **all four conditions** to be met:
 1. **Feature enabled globally**: Web Search enabled at **Admin Panel > Settings > Web Search**
 2. **Builtin Tools** capability ON for the model (in **Admin Panel > Settings > Models > Capabilities**)
 3. **Model capability**: `web_search` capability ON (in **Admin Panel > Settings > Models > Capabilities**)
